--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,10 +5,11 @@ db:
     - "3306:3306"
   environment:
     - MYSQL_ROOT_PASSWORD=password
+  restart: always
 
 php:
   build: .
-  volumes: 
+  volumes:
     - ./../sites:/var/www/html
   links:
     - db
